Users controller added and returning only json. Swagger complete
